--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,16 @@
-name = "awwbot"
+name = "rebellion-bot"
 main = "./src/server.js"
-compatibility_date="2023-05-18"
+compatibility_date = "2023-05-18"
 
 # [secrets]
 # DISCORD_TOKEN
 # DISCORD_PUBLIC_KEY
 # DISCORD_APPLICATION_ID
+
+[observability]
+enabled = true
+head_sampling_rate = 1
+
+[env.staging.observability]
+enabled = true
+head_sampling_rate = 1
